# gridx

./: README.md  cleaning.py  hello.py  http.py  pyproject.toml  test.ipynb  test_outages.ipynb  test_renewables.ipynb  test_vis.ipynb
Outage Data/: 2007_Annual_Summary.xls
cleaning/: test_outages.ipynb
data/NERC_Regions_EIA_6691509421014553792/: NERC_Regions_EIA.dbf  NERC_Regions_EIA.shp
data/Renewables/: prod_btu_re_te.xlsx  use_all_btu_update.csv
data/nerc_regions/: NERC_Regions_EIA.shp.xml  NERC_Regions_EIA.shx
data/outages/: 2002_Annual_Summary.xls  2004_Annual_Summary.xls  2005_Annual_Summary.xls  2006_Annual_Summary.xls  2009_Annual_Summary.xls  2023_Annual_Summary.xls  doe_source_urls.txt
data/renewables/: eia_seds_source_url.txt  eia_seds_source_urls.txt
data/state_pops/: census_source_urls.rtf  census_source_urls.txt
data/state_regions/: census_shp_source_url.txt
data/storms/: data_source_url.txt  noaa_source_url.txt  noaa_source_urls.txt  shorten_csvs.py  storms_2014.csv  storms_2015.csv  storms_2016.csv  storms_2017.csv  (+7 more)
exploration/: old_plant_sorting.py  quadtree.py  spatial_join_recursive.py  storms.py
gridx/: __main__.py  app.py  clean.py  recon.py  utils.py  viz.py
milestones/: milestone1.md  milestone2.md
output/: maps.html
script/: __main__.py  app.py  clean.py  cleaning.py  info.py  interact.py  load_data.ipynb  load_outages.ipynb  recon.py  renewables_dict.py  spatial_join.py  spatial_join_recursive.py  storms.py  utils.py  visualization.py  viz.py
tests/: test_clean.py  test_cleaning.py  test_recon.py  test_utils.py
(+20 files in other folders)
